Fixes notes z-index, adds resize capability

--- a/src/scss/style-dark.scss
+++ b/src/scss/style-dark.scss
@@ -144,11 +144,13 @@
 		-o-transition: all 0.15s ease-in-out;
 		transition: all 0.15s ease-in-out;
 		padding: 0;
-		z-index: 1001;
+		z-index: 10001;
 		position: absolute;
 		background-color: var(--theme-background-3);
 		display: flex;
 		flex-direction: column;
+		resize: both;
+		overflow: hidden;
 		&.player .notes-header {
 			background: var(--theme-secondary);
 		}
